Primera clase actualización

--- a/0.Inicio.html
+++ b/0.Inicio.html
@@ -164,7 +164,7 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">Tabla de contenidos</h2>
    
   <ul>
-  <li><a href="#curso-de-ciencia-de-datos-con-r-enfocado-en-temas-de-biodiversidad" id="toc-curso-de-ciencia-de-datos-con-r-enfocado-en-temas-de-biodiversidad" class="nav-link active" data-scroll-target="#curso-de-ciencia-de-datos-con-r-enfocado-en-temas-de-biodiversidad">Curso de Ciencia de Datos con R (enfocado en temas de biodiversidad)</a>
+  <li><a href="#curso-de-introducción-a-r-enfocado-en-temas-de-biodiversidad-y-ciencia-de-datos" id="toc-curso-de-introducción-a-r-enfocado-en-temas-de-biodiversidad-y-ciencia-de-datos" class="nav-link active" data-scroll-target="#curso-de-introducción-a-r-enfocado-en-temas-de-biodiversidad-y-ciencia-de-datos">Curso de Introducción a R (enfocado en temas de biodiversidad y ciencia de datos)</a>
   <ul class="collapse">
   <li><a href="#idea-del-curso" id="toc-idea-del-curso" class="nav-link" data-scroll-target="#idea-del-curso">Idea del curso</a></li>
   <li><a href="#curso-teórico-práctico" id="toc-curso-teórico-práctico" class="nav-link" data-scroll-target="#curso-teórico-práctico">Curso teórico-práctico</a></li>
@@ -219,8 +219,8 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<section id="curso-de-ciencia-de-datos-con-r-enfocado-en-temas-de-biodiversidad" class="level1">
-<h1>Curso de Ciencia de Datos con R (enfocado en temas de biodiversidad)</h1>
+<section id="curso-de-introducción-a-r-enfocado-en-temas-de-biodiversidad-y-ciencia-de-datos" class="level1">
+<h1>Curso de Introducción a R (enfocado en temas de biodiversidad y ciencia de datos)</h1>
 <section id="idea-del-curso" class="level2">
 <h2 class="anchored" data-anchor-id="idea-del-curso">Idea del curso</h2>
 <ul>
@@ -241,8 +241,8 @@ ul.task-list li input[type="checkbox"] {
 <li>2 horas por semana (16 horas en total).</li>
 <li>Horario: 18-20 hrs (GMT-6).</li>
 <li>Tareas semanales (aprox. una hora).</li>
-<li>Trabajo final.</li>
-<li>Comunicación vía telegram.</li>
+<li>Trabajo final (aprox 3 hrs).</li>
+<li>Comunicación vía classroom, correo o telegram. Sugiero usar telegram para cosas muy puntuales o interactuar entre ustedes.</li>
 </ul>
 </section>
 </section>
