--- a/1.IntroducciónR.html
+++ b/1.IntroducciónR.html
@@ -320,7 +320,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <div>
 
 </div>
-<div class="quarto-layout-panel" data-layout-ncol="2">
+<div id="figsr" class="quarto-layout-panel" data-layout-ncol="2">
 <div class="quarto-layout-row">
 <div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: flex-start;">
 <p><img src="imgs/gif1.png" class="img-fluid"> <img src="imgs/gif2.png" class="img-fluid"> <img src="imgs/gif3.png" class="img-fluid"> <img src="imgs/gif4.png" class="img-fluid"> <img src="imgs/gif5.png" class="img-fluid"> <img src="imgs/gif6.png" class="img-fluid"> <img src="imgs/gif7.jpg" class="img-fluid"> <img src="imgs/gif8.png" class="img-fluid"> <img src="imgs/gif9.jpeg" class="img-fluid"> <img src="imgs/gif9.png" class="img-fluid"> <img src="imgs/gif10.png" class="img-fluid"> <img src="imgs/gif11.png" class="img-fluid"></p>
@@ -356,7 +356,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <section id="cómo-obtenerlo" class="level1">
 <h1>¿Cómo obtenerlo?</h1>
 <ul>
-<li>Ingresar a: https://cran.r-project.org/</li>
+<li>Ingresar a: <a href="https://cran.r-project.org/">https://cran.r-project.org/</a></li>
 <li>Descargar la versión para el sistema operativo que se desea.</li>
 </ul>
 </section>
@@ -367,7 +367,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </ul>
 <p>Sugerencia para trabajar: RStudio</p>
 <ul>
-<li>Entrar al sitio: https://www.rstudio.com/</li>
+<li>Entrar al sitio: <a href="https://www.rstudio.com/">https://www.rstudio.com/</a></li>
 <li>Descargar la versión para el sistema operativo que se desea</li>
 </ul>
 <p>Pantalla principal de R</p>
