Agregar Tarea1 resuelta

--- a/0.Inicio.html
+++ b/0.Inicio.html
@@ -158,6 +158,11 @@ ul.task-list li input[type="checkbox"] {
   <a href="./8.CierreyQuarto.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">8.CierreyQuarto</span></a>
   </div>
 </li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./9.TareasResueltas.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">Tarea1</span></a>
+  </div>
+</li>
     </ul>
     </div>
     <nav id="TOC" role="doc-toc" class="toc-active">
