--- a/2.ManejoDatos.html
+++ b/2.ManejoDatos.html
@@ -192,6 +192,11 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
   <a href="./8.CierreyQuarto.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">8.CierreyQuarto</span></a>
   </div>
 </li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./9.TareasResueltas.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">Tarea1</span></a>
+  </div>
+</li>
     </ul>
     </div>
     <nav id="TOC" role="doc-toc" class="toc-active">
