--- a/4.AnálisisEstad.html
+++ b/4.AnálisisEstad.html
@@ -192,6 +192,11 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
   <a href="./8.CierreyQuarto.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">8.CierreyQuarto</span></a>
   </div>
 </li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./9.TareasResueltas.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">Tarea1</span></a>
+  </div>
+</li>
     </ul>
     </div>
     <nav id="TOC" role="doc-toc" class="toc-active">
@@ -393,7 +398,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <pre><code># A tibble: 1 × 3
   variable       statistic        p
   &lt;chr&gt;              &lt;dbl&gt;    &lt;dbl&gt;
-1 AlturaTotal_C3     0.875 5.09e-53</code></pre>
+1 AlturaTotal_C3     0.876 6.08e-53</code></pre>
 </div>
 </div>
 </section>
