--- a/0.Inicio.html
+++ b/0.Inicio.html
@@ -160,7 +160,7 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./9.TareasResueltas.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">Tarea1</span></a>
+  <a href="./9.TareasResueltas.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">9.Tareas Resueltas</span></a>
   </div>
 </li>
     </ul>
