--- a/4.AnálisisEstad.html
+++ b/4.AnálisisEstad.html
@@ -194,7 +194,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./9.TareasResueltas.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">Tarea1</span></a>
+  <a href="./9.TareasResueltas.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">9.Tareas Resueltas</span></a>
   </div>
 </li>
     </ul>
@@ -398,7 +398,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <pre><code># A tibble: 1 × 3
   variable       statistic        p
   &lt;chr&gt;              &lt;dbl&gt;    &lt;dbl&gt;
-1 AlturaTotal_C3     0.876 6.08e-53</code></pre>
+1 AlturaTotal_C3     0.877 1.02e-52</code></pre>
 </div>
 </div>
 </section>
