--- a/8.CierreyQuarto.html
+++ b/8.CierreyQuarto.html
@@ -160,7 +160,7 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./9.TareasResueltas.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">Tarea1</span></a>
+  <a href="./9.TareasResueltas.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">9.Tareas Resueltas</span></a>
   </div>
 </li>
     </ul>
@@ -808,8 +808,8 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
       </a>          
   </div>
   <div class="nav-page nav-page-next">
-      <a href="./9.TareasResueltas.html" class="pagination-link" aria-label="Tarea1">
-        <span class="nav-page-text"><span class="chapter-title">Tarea1</span></span> <i class="bi bi-arrow-right-short"></i>
+      <a href="./9.TareasResueltas.html" class="pagination-link" aria-label="9.Tareas Resueltas">
+        <span class="nav-page-text"><span class="chapter-title">9.Tareas Resueltas</span></span> <i class="bi bi-arrow-right-short"></i>
       </a>
   </div>
 </nav>
