--- a/5.Ggplot.html
+++ b/5.Ggplot.html
@@ -197,6 +197,11 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
   <a href="./9.TareasResueltas.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">9.Tareas Resueltas</span></a>
   </div>
 </li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./10.BasesDatosBiodiversidad.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">10.Bases de datos de Biodiversidad</span></a>
+  </div>
+</li>
     </ul>
     </div>
     <nav id="TOC" role="doc-toc" class="toc-active">
