--- a/9.TareasResueltas.html
+++ b/9.TareasResueltas.html
@@ -65,6 +65,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <script src="site_libs/quarto-search/fuse.min.js"></script>
 <script src="site_libs/quarto-search/quarto-search.js"></script>
 <meta name="quarto:offset" content="./">
+<link href="./10.BasesDatosBiodiversidad.html" rel="next">
 <link href="./8.CierreyQuarto.html" rel="prev">
 <script src="site_libs/quarto-html/quarto.js"></script>
 <script src="site_libs/quarto-html/popper.min.js"></script>
@@ -194,6 +195,11 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./9.TareasResueltas.html" class="sidebar-item-text sidebar-link active"><span class="chapter-title">9.Tareas Resueltas</span></a>
+  </div>
+</li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./10.BasesDatosBiodiversidad.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">10.Bases de datos de Biodiversidad</span></a>
   </div>
 </li>
     </ul>
@@ -892,6 +898,9 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
       </a>          
   </div>
   <div class="nav-page nav-page-next">
+      <a href="./10.BasesDatosBiodiversidad.html" class="pagination-link" aria-label="10.Bases de datos de Biodiversidad">
+        <span class="nav-page-text"><span class="chapter-title">10.Bases de datos de Biodiversidad</span></span> <i class="bi bi-arrow-right-short"></i>
+      </a>
   </div>
 </nav>
 </div> <!-- /content -->
