--- a/8.CierreyQuarto.html
+++ b/8.CierreyQuarto.html
@@ -175,6 +175,11 @@ ul.task-list li input[type="checkbox"] {
    
   <ul>
   <li><a href="#quarto" id="toc-quarto" class="nav-link active" data-scroll-target="#quarto">Quarto</a></li>
+  <li><a href="#trabajo-final" id="toc-trabajo-final" class="nav-link" data-scroll-target="#trabajo-final">Trabajo final</a></li>
+  <li><a href="#repaso-del-curso" id="toc-repaso-del-curso" class="nav-link" data-scroll-target="#repaso-del-curso">Repaso del curso</a></li>
+  <li><a href="#otras-cosas-que-no-vimos" id="toc-otras-cosas-que-no-vimos" class="nav-link" data-scroll-target="#otras-cosas-que-no-vimos">Otras cosas que no vimos</a></li>
+  <li><a href="#últimos-pasos" id="toc-últimos-pasos" class="nav-link" data-scroll-target="#últimos-pasos">Últimos pasos</a></li>
+  <li><a href="#dudas" id="toc-dudas" class="nav-link" data-scroll-target="#dudas">¿Dudas?</a></li>
   </ul>
 </nav>
 </nav>
@@ -243,7 +248,15 @@ ul.task-list li input[type="checkbox"] {
 <li>Manuscritos.</li>
 </ul>
 <p>El flujo de trabajo:</p>
-<div class="![](imgs/quartowf.png):::">
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="imgs/quartowf.png" class="img-fluid figure-img" style="width:80.0%"></p>
+</figure>
+</div>
+</div>
+</div>
 <p>Permite el manejo de referencias con bib.</p>
 <p>Una alternativa muy similar es RMarkdown.</p>
 <ol start="0" type="1">
@@ -258,6 +271,7 @@ ul.task-list li input[type="checkbox"] {
 <p>Veamos el archivo Quarto de muestra.</p>
 <p>De hecho todo el librito de la clase está hecho en Quarto 😉.</p>
 <p>Ver algunos temas: <a href="https://quarto.org/docs/output-formats/html-themes.html">Temas</a></p>
+</section>
 <section id="trabajo-final" class="level1">
 <h1>Trabajo final</h1>
 <p>La idea es que apliquen los conocimientos adquiridos con un conjunto de datos que les interese. Este conjunto de datos puede ser uno suyo o uno públicamente disponible.</p>
@@ -405,8 +419,6 @@ ul.task-list li input[type="checkbox"] {
 <p>Mi correo por cualquier cosa en el futuro: jonathanvsv@gmail.com</p>
 
 
-</section>
-</div>
 </section>
 
 </main> <!-- /main -->
